# pip_pkg_info

./: README.md  pyproject.toml
pip_pkg_info/: __init__.py  __main__.py  install.py  pip_version.py  pkg_info.py  uninstall.py  uninstall_all.py
